
New features:
..F....... [ZBXNEXT-4792] added column "Latest values" in Monitoring->Problems and Dashboard (ashubin, gcalenko, vasilijs)
..F....... [ZBX-15202] implemented widget pausing methods in dashboard; made graph widget paused when using selection box or opening a tooltip (miks)
..F....PS. [ZBXNEXT-2315] implemented content matching in web monitoring headers (talbergs, vso)

Bug fixes:
........S. [ZBX-15258] fixed update interval of "Zabbix queue" item in server's template to be consistent with proxy template, added missing units in proxy template (asitals)
........S. [ZBX-15241] fixed escaping regexp symbols in preprocessing output parameter when creating item by LLD (asitals)
...G...... [ZBX-15225] improved handling of timeouts in "vfs.dir.size" and "vfs.dir.count" items on Windows agent (asitals)
.......PS. [ZBX-15206] fixed deprecated net-snmp attribute (MVekslers)
.......PS. [ZBX-15067] fixed configuration sync of interfaces without hosts (kalimulin)
.......PS. [ZBX-15238] fixed updating nextcheck time in discovery rules to avoid overlaps between discovery executions (asitals)
..F....... [ZBX-13673] fixed regexp validation when pattern contain slash character (gcalenko)
....I....T [ZBX-13773] fixed naming inconsistencies in agent template, added more trigger descriptions in proxy and server templates (kalimulin)
..F....... [ZBX-14528] fixed incorrect keycode handling in multiselect input fields (miks)
A.F....... [ZBX-15124] fixed trigger overview behavior when show "any" (vasilijs)
A......... [ZBX-14648] fixed performance with deletion of item in template linked to many hosts (Sasha)
.......PS. [ZBX-9011] added new LLD macros for vmware HV low-level discovery (MVekslers)
..F....... [ZBX-15105] fixed colorpicker tooltip update (talbergs)
A.F....... [ZBX-14928] fixed "check now" being executed for active items and templates (talbergs)